<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#e1e1da">
    <fragment
        android:id="@+id/me_setting_toolbar_acyivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.example.message3.TitleToolbarSecond"/>

    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/line"
        android:showDividers="middle"
        android:dividerPadding="16dp"
        android:background="#ffffff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000000"
                android:text="@string/ProfilePhoto"/>

            <ImageView
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/apple"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/my_setting_relativelayout_name"
            android:layout_width="match_parent"
            android:layout_height="55dp">
            <TextView
                android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000000"
                android:text="@string/Name"/>

            <TextView
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/username"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <TextView
                android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000000"
                android:text="@string/NameId"/>

            <TextView
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/userID"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/my_setting_relativelayout_qrcode"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <TextView
                android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000000"
                android:text="@string/QRcode"/>

            <ImageView
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/erweimatubiao"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/line"
        android:showDividers="middle"
        android:dividerPadding="16dp"
        android:background="#ffffff">

        <RelativeLayout
            android:id="@+id/my_setting_relativelayout_gender"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <TextView
                android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000000"
                android:text="@string/Gender"/>

            <TextView
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/Mail"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp">

        <TextView
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/Rdgion"/>

        <TextView
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/Beijing"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/my_setting_relativelayout_whatsup"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <TextView
                android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000000"
                android:text="@string/WhatsUP"/>

            <TextView
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/whatsup"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>